hphp/hack/test/typecheck/collection_missing_arrow_immmap_legacy.php
<?hh

function test(): void {
  // Missing arrow in a key-value collection (ImmMap)
  $x = ImmMap {'just_value'};
}
